Sun Jun  2 15:04:35 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/cgi/util.rb, lib/erb.rb: Use String#b [Feature #8394] by znz

Sun Jun  2 14:10:21 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/irb/lc/help-message: Apply english updates for irb --help #7510

Sun Jun  2 12:03:58 2013  Zachary Scott  <zachary@zacharyscott.net>

	* range.c: Fix rdoc on Range#bsearch [Bug #8242] [ruby-core:54143]

Sun Jun  2 02:08:37 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/euc_jp.c: fix typo: the name of EUC-JIS-2004.

Sat Jun  1 23:17:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm_eval.c (rb_mod_module_eval): mention in docs that arguments passed
	  to the method are passed to the block

Sat Jun  1 17:58:13 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#freeze, taint, untaint): Save a "self" by
	  utilizing super returning self, and add tests while at it.

Sat Jun  1 17:24:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments): not a simple single argument if any
	  keyword arguments exist.  [ruby-core:55203] [Bug #8463]

	* vm_insnhelper.c (vm_yield_setup_block_args): split single parameter
	  if any keyword arguments exist, and then extract keyword arguments.
	  [ruby-core:55203] [Bug #8463]

Sat Jun  1 11:16:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_exc_new_cstr): rename from rb_exc_new2.

	* error.c (rb_exc_new_str): rename from rb_exc_new3.

Sat Jun  1 10:13:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_new[2-5], rb_{tainted,usascii}_str_new2),
	  (rb_str_buf_new2): remove old interfaces.

Sat Jun  1 08:00:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read, gzfile_read_all, gzfile_getc),
	  (gzreader_gets): check EOF.  [ruby-core:55220] [Bug #8467]

Sat Jun  1 07:32:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Use BDIGIT type for hbase.

Sat Jun  1 02:37:35 2013  NARUSE, Yui  <naruse@ruby-lang.org>
